# drumscribe-index

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: api.rs  index_cache.rs  main.rs  output.rs
cli/src/api/: coffee_api.rs
cli/src/conversions/: post.rs
cli/src/models/: song.rs
cli/src/output/: html.rs  markdown.rs  pdf.rs  styles.css  xlsx.rs
scripts/: bump.sh  install.sh  make-cli-release.sh  make-dmg.sh
src/: corrections.rs  index_cache.rs  main.rs  output.rs
src/api/: coffee_api.rs  post.rs
src/conversions/: post.rs
src/models/: post.rs  song.rs
src/output/: html.rs  json.rs  markdown.rs  styles.css  xlsx.rs
ui/DrumscribeIndex/: ContentView.swift  DrumscribeIndexApp.swift  FavoritesStore.swift  Models.swift  SongLoader.swift  UpdateChecker.swift
ui/DrumscribeIndex.xcodeproj/: project.pbxproj
ui/DrumscribeIndex.xcodeproj/xcshareddata/xcschemes/: DrumscribeIndex.xcscheme
ui/DrumscribeIndex/AppIcon.icon/: icon.json
