[package]
name = "drumscribe-index"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
directories = "6.0.0"
postcard = { version = "1.1.3", features = ["alloc"] }
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["json"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }

[lints.clippy]
pedantic = "warn"
