[package]
name = "drumscribe-index"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = { version = "0.2", features = ["variable-fonts"] }
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
maud = "0.27.0"
postcard = { version = "1.1.3", features = ["alloc"] }
printpdf = "0.6"
regex = "1.12.2"
reqwest = { version = "0.12.28", features = ["json"] }
rust_xlsxwriter = "0.92.2"
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }

[lints.clippy]
pedantic = "warn"
